# arrayfire-project-templates

./: CMakeLists.txt  LICENSE  README.md
ArrayFire_CUDA/: ArrayFire_CUDA.sln  ArrayFire_CUDA.vcxproj  kernel.cu
ArrayFire_CUDA-7/: ArrayFire_CUDA.vcxproj  kernel.cu
ArrayFire_VS2013/: helloworld.cpp  helloworld_vs2013.sln  helloworld_vs2013.vcxproj
CMake/: README.md
CMake/src/: main.cpp
VS2013/: README.md
VS2013/ArrayFire-CUDA/: ArrayFire-CUDA.sln  ArrayFire-CUDA.vcxproj
VS2013/ArrayFire-VS2013/: .gitignore  ArrayFire-VS2013.sln  ArrayFire-VS2013.vcxproj
VS2015/: README.md
VS2015/ArrayFire-CUDA/: .gitignore  ArrayFire-CUDA.sln  ArrayFire-CUDA.vcxproj
VS2015/ArrayFire-VS2015/: ArrayFire-VS2015.sln  ArrayFire-VS2015.vcxproj
XCode/: .gitignore  README.md
XCode/ArrayFire-CPU/ArrayFire-CPU.xcodeproj/: project.pbxproj
XCode/ArrayFire-CUDA/ArrayFire-CUDA.xcodeproj/: project.pbxproj
XCode/ArrayFire-OpenCL/ArrayFire-OpenCL.xcodeproj/: project.pbxproj
XCode/ArrayFire-Unified/ArrayFire-Unified.xcodeproj/: project.pbxproj
XCode/ArrayFire-XCode.xcworkspace/: contents.xcworkspacedata
XCode/src/: main.cpp
src/: CMakeLists.txt
